<resources>
    <string name="app_name">AZShopping</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="on_boarding1_txt1">20% Discount\nNew Arrival Product</string>
    <string name="on_boarding_txt2">Publish up your selfies to make your more beautiful with this app</string>
    <string name="on_boarding2_txt1">Take Advantage\nOf The Offer Shopping</string>
    <string name="on_boarding3_txt1">All Types Offers\nWithin Your Reach</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome!</string>
    <string name="email">Email</string>
    <string name="create_a_new_account">create a new account</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="by_creating_an_account_you_have_to_agree_with_our_them_amp_condition"><![CDATA[By creating an account you have to agree with our them & condition.]]></string>
    <string name="logo">Logo</string>
    <string name="you_have_successfully_registered_in_nour_app_and_start_working_in_it">you have successfully registered in\nour app and start working in it.</string>
    <string name="successful">Successful!</string>
    <string name="done">Done</string>
    <string name="start_shopping">Start Shopping</string>
    <string name="home">Home</string>
    <string name="my_cart">My Cart</string>
    <string name="my_wishlist">My WishList</string>
    <string name="profile">Profile</string>
    <string name="new_arrival">New Arrival</string>
    <string name="product_name">Product Name</string>
    <string name="languages">Languages</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="product">Product</string>
    <string name="price">Price</string>
    <string name="_1">1</string>
    <string name="subtotal">Subtotal:</string>
    <string name="_121">121$</string>
    <string name="shipping">Shipping:</string>
    <string name="_17">17$</string>
    <string name="bagtotal">BagTotal:</string>
    <string name="proceed_to_checkout">Proceed to Checkout</string>
    <string name="search_">Search here</string>
    <string name="please_login_or_sign_upto_continue_our_app">please login or sign up to continue our app</string>
    <string name="or">or</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="clothes">Clothes</string>
    <string name="my_favourites">My Favourites</string>
    <string name="my_orders">My Orders</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="whishlist">Whishlist</string>

</resources>