<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".auth.ui.SucessRegisterFragment">


    <ImageView
        android:id="@+id/iv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:contentDescription="@string/done"
        android:src="@drawable/icon_done" />

    <TextView
        android:id="@+id/tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/successful"
        android:textColor="@color/black"
        android:textSize="25sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv"
        android:layout_centerHorizontal="true"
        android:text="@string/you_have_successfully_registered_in_nour_app_and_start_working_in_it"
        android:textAlignment="center" />


    <Button
        android:id="@+id/start_shopping"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/btn_bgstroke"
        android:text="@string/start_shopping"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp" />
</RelativeLayout>