<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".auth.ui.SignUpFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:textSize="22sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:alpha="0.6"
        android:fontFamily="@font/poppins"
        android:text="@string/create_a_new_account"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/user_name"
        android:textColor="@color/black"
        android:textSize="19sp" />

    <EditText
        android:id="@+id/nameEd"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="20dp"
        android:autofillHints="name"
        android:backgroundTint="#EFD8D8"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textSize="19sp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="20dp"
        android:autofillHints="emailAddress"
        android:backgroundTint="#EFD8D8"
        android:ems="10"
        android:textSize="16sp"
        android:inputType="textEmailAddress"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/password"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/password_sign"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="20dp"
        android:autofillHints="password"
        android:backgroundTint="#EFD8D8"
        android:textSize="16sp"
        android:ems="10"
        android:inputType="numberPassword"
        android:maxLength="6" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/confirm_password"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginHorizontal="20dp"
        android:autofillHints="password"
        android:backgroundTint="#EFD8D8"
        android:textSize="16sp"
        android:ems="10"
        android:inputType="numberPassword"
        android:maxLength="6" />

    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="5dp"
        android:alpha="0.4"
        android:text="@string/by_creating_an_account_you_have_to_agree_with_our_them_amp_condition"
        app:backgroundTint="@color/black" />

    <Button
        android:id="@+id/btn_SignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="35dp"
        android:clickable="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/btn_bg"
        android:backgroundTint="@color/black"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp" />


</LinearLayout>