<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".auth.ui.LoginFragment">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/welcome"
        android:textColor="@color/black"
        android:textSize="22sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:alpha="0.6"
        android:fontFamily="@font/poppins"
        android:text="@string/please_login_or_sign_upto_continue_our_app"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/email"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/emailEd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:backgroundTint="#EFD8D8"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/password"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="15dp"
        android:maxLength="6"
        android:backgroundTint="#EFD8D8"
        android:ems="10"
        android:inputType="numberPassword" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="35dp"
        android:background="@drawable/btn_bg"
        android:backgroundTint="@color/black"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            android:weightSum="2">

            <View
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_marginStart="30dp"
                android:layout_weight="1"
                android:background="#E7E9EA" />

            <View
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_marginStart="35dp"
                android:layout_marginEnd="30dp"
                android:layout_weight="1"
                android:background="#E7E9EA" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/or"
            android:textColor="@color/black" />

    </FrameLayout>


    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/btn_bg"
        android:backgroundTint="@color/black"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="18sp" />


</LinearLayout>