<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".home.ui.CartFragment">

    <ImageView
        android:id="@+id/iv_back_cart"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_rounded"
        android:padding="10dp"
        android:src="@drawable/back_arrow" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/my_cart"
        android:textColor="@color/black"
        android:textSize="22sp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cart_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:padding="15dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:cardCornerRadius="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp"
                android:weightSum="2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/subtotal"
                    android:textColor="@color/black"
                    android:textSize="18sp" />


                <TextView
                    android:id="@+id/total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/_121"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/black"
                    android:textSize="20sp" />


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="#F1EFEF" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp"
                android:weightSum="2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/shipping"
                    android:textColor="@color/black"
                    android:textSize="18sp" />


                <TextView
                    android:id="@+id/shipping"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_bold"

                    android:text="@string/_17"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/black"
                    android:textSize="20sp" />


            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="5dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="#F1EFEF" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="10dp"
                android:weightSum="2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/bagtotal"
                    android:textColor="@color/black"
                    android:textSize="18sp" />


                <TextView
                    android:id="@+id/bag_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="30dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_bold"
                    android:text="121$"
                    android:textAlignment="viewEnd"
                    android:textColor="@color/black"
                    android:textSize="20sp" />


            </LinearLayout>


        </LinearLayout>


    </androidx.cardview.widget.CardView>


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@drawable/btn_bg"
        android:backgroundTint="@color/black"
        android:text="@string/proceed_to_checkout"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp" />

</LinearLayout>