<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    android:background="@color/white"
    android:layout_marginBottom="10dp"
    android:padding="10dp">

    <ImageView
        android:id="@+id/cart_iv"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_centerVertical="true"
        android:scaleType="centerCrop"
        android:src="@drawable/bjpg" />

    <TextView
        android:id="@+id/cart_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/cart_iv"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/product"
        android:textColor="@color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/cart_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cart_name"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/cart_iv"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/price"
        android:textColor="@color/black"
        android:textSize="18sp" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/cart_btn"
        android:padding="5dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/add"
            android:layout_width="16dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:src="@drawable/ic_baseline_add_24" />

        <TextView
            android:id="@+id/number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:textSize="18sp"
            android:layout_gravity="center"
            android:text="@string/_1"
            android:textColor="@color/black"/>

        <ImageView
            android:id="@+id/subtraction"
            android:layout_width="16dp"
            android:layout_height="wrap_content"
            android:src="@drawable/icons_minus"/>


    </LinearLayout>


</RelativeLayout>