<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".home.ui.LanguagesFragment">



    <ImageView
        android:id="@+id/iv_back_lang"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/btn_rounded"
        android:padding="10dp"
        android:src="@drawable/back_arrow" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/languages"
        android:fontFamily="@font/poppins_bold"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        android:textColor="@color/black"
        android:textSize="20sp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        app:cardCornerRadius="15dp"
        android:layout_margin="20dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/arabic"
                android:layout_width="wrap_content"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:layout_marginBottom="5dp"
                android:textSize="18sp"
                android:text="@string/arabic"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/black"
                android:alpha="0.1"/>

            <TextView
                android:id="@+id/english"
                android:layout_width="wrap_content"
                android:fontFamily="@font/poppins_medium"
                android:textColor="@color/black"
                android:layout_marginTop="5dp"
                android:textSize="18sp"
                android:layout_height="wrap_content"
                android:text="@string/english"/>

        </LinearLayout>



    </androidx.cardview.widget.CardView>


</LinearLayout>