<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".home.ui.ProfileFragment">

    <ImageView
        android:id="@+id/iv_back_profile"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/btn_rounded"
        android:padding="10dp"
        android:src="@drawable/back_arrow" />


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:elevation="50dp"
        android:outlineSpotShadowColor="@color/inactive"
        app:cardCornerRadius="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:scaleType="centerCrop"
                android:src="@drawable/bjpg" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/profile_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/poppins_bold"
                    android:text="name"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/profile_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="0.6"
                    android:fontFamily="@font/poppins"
                    android:text="@string/email"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:layout_marginTop="15dp"
        android:elevation="50dp"
        app:cardCornerRadius="20dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:background="#F8F2F2"
                        android:src="@drawable/ic_favorite" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="15dp"
                        android:fontFamily="@font/poppins_bold"
                        android:text="@string/my_favourites"
                        android:textColor="@color/black"
                        android:textSize="18sp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:background="#F8F2F2"
                        android:src="@drawable/cart" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="15dp"
                        android:fontFamily="@font/poppins_bold"
                        android:text="@string/my_orders"
                        android:textColor="@color/black"
                        android:textSize="18sp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="10dp"
                        android:background="#F8F2F2"
                        android:src="@drawable/ic_baseline_settings_24" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="15dp"
                        android:fontFamily="@font/poppins_bold"
                        android:text="@string/settings"
                        android:textColor="@color/black"
                        android:textSize="18sp" />


                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:weightSum="3"
                android:gravity="end"
                android:layout_marginEnd="30dp"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/to_favorite"
                    android:layout_width="23dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_baseline_arrow_forward_24" />

                <ImageView
                    android:id="@+id/to_cart"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_baseline_arrow_forward_24" />


                <ImageView
                    android:id="@+id/to_settings"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_baseline_arrow_forward_24" />


            </LinearLayout>


        </LinearLayout>


    </androidx.cardview.widget.CardView>


    <Button
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_bgstroke"
        android:text="@string/log_out"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:fontFamily="@font/poppins_bold"
        android:layout_margin="40dp"/>

</LinearLayout>